# rust-goldenfile

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  README.md  goldenfile.sublime-project  goldenfile.sublime-workspace
.github/workflows/: test.yaml
dev/: install-git-hooks  presubmit
dev/git-hooks/: pre-commit
scripts/: install-git-hooks  presubmit
scripts/git-hooks/: pre-commit
src/: differs.rs  lib.rs  mint.rs
tests/: .gitignore  basics.rs  readme_usage.rs  send_sync.rs  test.rs  usage.rs
tests/goldenfiles/: invalid_utf8.txt
tests/goldenfiles/subdir/: file1.txt
