[package]
name = "goldenfile"
version = "1.6.0"
edition = "2021"
description = "Simple goldenfile testing library"
keywords = ["goldenfile", "test", "library"]
documentation = "https://docs.rs/goldenfile"
repository = "https://github.com/calder/rust-goldenfile"
readme = "README.md"
license = "MIT"
authors = ["Calder Coalson <caldercoalson@gmail.com>"]

exclude = [
  "/.travis.yml",
  "/scripts",
]

[dependencies]
scopeguard = "1.2"
similar-asserts = "1.4"
tempfile = "3"
yansi = "1.0.0-rc.1"
