[package]
name = "goldenfile"
version = "1.7.0"
edition = "2021"
description = "Simple goldenfile testing library"
keywords = ["goldenfile", "test", "library"]
documentation = "https://docs.rs/goldenfile"
repository = "https://github.com/calder/rust-goldenfile"
readme = "README.md"
license = "MIT"
authors = ["Calder Coalson <caldercoalson@gmail.com>"]

exclude = [
  "/.travis.yml",
  "/scripts",
]

[dependencies]
scopeguard = "1"
similar-asserts = "1"
tempfile = "3"
yansi = "1"
