[package]
name = "goldenfile"
version = "1.9.1"
edition = "2024"
rust-version = "1.88"
description = "Simple goldenfile testing library"
keywords = ["goldenfile", "test", "library"]
documentation = "https://docs.rs/goldenfile"
repository = "https://github.com/calder/rust-goldenfile"
readme = "README.md"
license = "MIT"
authors = ["Calder Coalson <caldercoalson@gmail.com>"]

[dependencies]
scopeguard = "1"
similar-asserts = "1"
static_assertions = "1"
tempfile = "3"
yansi = "1"
